feat: Use JDK 17 for compatibility reasons